--- a/index.html
+++ b/index.html
@@ -8,10 +8,21 @@
 <style>
     body {background-color: rgba(20, 22, 24, 0.986);}
 </style>
+
+<style>
+    img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 20%;
+}
+</style>
+
+
 <body>
     <h1 class="estiloTexto">Rubén Fernando Ramírez Oliva</h1>
     <hr />
-    <img style="align-items: center;" src="Perfil.jpg" alt="" width="30%" height="30%" />
+    <img src="Perfil.jpg" alt="" width="30%" height="30%" />
 
     </br>
     <p class="estiloTexto2">¡Hola buenas! Mi nombre es <b>Rubén Ramírez</b>, soy estudiante de
